[gd_scene load_steps=6 format=3 uid="uid://83lf4w57ss45"]

[ext_resource type="Script" uid="uid://bl7b8ayalf1wp" path="res://scripts/dice_roller_ui.gd" id="1"]
[ext_resource type="Theme" uid="uid://cweds3dwi6kx5" path="res://Image/UI/ButtonUpComplete.tres" id="2"]
[ext_resource type="Theme" uid="uid://c5h01s0uaqc3b" path="res://Image/UI/ButtonDownComplete.tres" id="3"]
[ext_resource type="Theme" uid="uid://c8otso07yd5di" path="res://Image/UI/BloodButtonCompleted.tres" id="4"]
[ext_resource type="Theme" uid="uid://3tb6bit6vroh" path="res://Image/UI/MapleButtonComplete.tres" id="5"]

[node name="DiceRollerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -132.5
offset_right = 200.0
offset_bottom = 132.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Dice Roller"
horizontal_alignment = 1

[node name="DifficultyContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
alignment = 1

[node name="Panel" type="Panel" parent="Panel/VBoxContainer/DifficultyContainer"]
custom_minimum_size = Vector2(60, 40)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/VBoxContainer/DifficultyContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -11.5
offset_right = 0.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/DifficultyContainer"]
layout_mode = 2

[node name="Increase" type="Button" parent="Panel/VBoxContainer/DifficultyContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2")

[node name="Decrease" type="Button" parent="Panel/VBoxContainer/DifficultyContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Attribute"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="OptionButton" type="OptionButton" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Ability"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="OptionButton" type="OptionButton" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Cancel" type="Button" parent="Panel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme = ExtResource("4")
text = "Cancel"

[node name="Public" type="Button" parent="Panel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme = ExtResource("4")
text = "Public"

[node name="Private" type="Button" parent="Panel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4")
text = "Private"

[node name="SpecializationButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 42.5
offset_right = 65.0
offset_bottom = 87.5
theme = ExtResource("5")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 16.5
offset_right = 82.0
offset_bottom = 39.5
text = "Speciality"

[node name="WillpowerButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 113.5
offset_right = 65.0
offset_bottom = 158.5
theme = ExtResource("5")

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 92.5
offset_right = 83.0
offset_bottom = 115.5
text = "Willpower"
